<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="80">

                <EditText
                    android:hint="Insert username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:id="@+id/edit_text_username"
                    android:layout_alignParentStart="true" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:text="Find"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_find_users"
                android:layout_weight="20"
                android:elevation="8dp"
                android:layout_gravity="center_vertical|center_horizontal" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/linearLayout">

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recycler_view_find_user" />

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:layout_gravity="center_vertical|center_horizontal"
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:focusable="true" />
        </FrameLayout>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>