<resources>
    <string name="app_name">IQueChat</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="remember_password">Remember Password</string>
    <string name="restore_password">Restore Password</string>
    <string name="username">Username</string>
    <string name="enter_you_email">Enter you eMail</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_message">type message</string>
    <string name="select_participants">Select participants:</string>
    <string name="chat_name">Chat Name</string>
    <string name="logout">Logout</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
    <string name="terms_and_conditions">Please read these Terms and Conditions ("Terms", "Terms and Conditions") carefully before using
the http://www.mywebsite.com (change this) website and the My Mobile App (change this) mobile
application (the "Service") operated by My Company (change this) ("us", "we", or "our").
Your access to and use of the Service is conditioned on your acceptance of and compliance with
these Terms. These Terms apply to all visitors, users and others who access or use the Service.
By accessing or using the Service you agree to be bound by these Terms. If you disagree
with any part of the terms then you may not access the Service.
Purchases
If you wish to purchase any product or service made available through the Service ("Purchase"),
you may be asked to supply certain information relevant to your Purchase including, without
limitation, your …
The Purchases section is for businesses that sell online (physical or digital). For the full
disclosure section, create your own Terms and Conditions.
Subscriptions
Some parts of the Service are billed on a subscription basis ("Subscription(s)"). You will be billed in
advance on a recurring …
The Subscriptions section is for SaaS businesses. For the full disclosure section, create your
own Terms and Conditions.
</string>
    <string name="about_us">iQueSoft is an outsourcing company delivering Custom Software Development services and solutions serving US and European companies. We specialize in Enterprise Software, Custom Web, Desktop and Mobile Development. Since 2010 we are developing custom software for retail, logistics, advertising and other industries. We are motivated and inspired to leverage advanced software technologies empowering your business to accelerate your growth, strengthen your market position and exceed your customer’s expectations. We do believe that we make something special in the outsourcing world when it comes about productivity. By using the best technologies available from Microsoft (e.g. .NET Framework, ASP.NET MVC web applications, Web Services, Windows Server, Microsoft SQL Server, etc.) we are able to give you the best results possible. As a reliable partner, iQueSoft provides clear guarantees, customer care, project support and legal liabilities, including protection of intellectual property rights and NDA.</string>
</resources>
