<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/fragment_friends_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:stdrv="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="8dp">
...
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_menu_add"
        android:id="@+id/fab_add_friend"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_behavior="com.iquesoft.andrew.seedprojectchat.util.Fab_Float_onScroll"/>

</FrameLayout>
