<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Home"/>
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_menu_share"
            android:title="Friends"/>
        <item
            android:id="@+id/nav_group_chat"
            android:icon="@drawable/ic_menu_gallery"
            android:title="GroupChat" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Rights and licenses">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_terms_and_conditions"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Terms and Conditions" />
                <item
                    android:id="@+id/nav_about_us"
                    android:icon="@drawable/ic_menu_send"
                    android:title="About Us" />
            </group>
        </menu>
    </item>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
